grammar/Bplus.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module Bplus
  include Treetop::Runtime

  def root
    @root ||= :simple_statement
  end

  module SimpleStatement0
    def _s_
      elements[1]
    end

  end

  def _nt_simple_statement
    start_index = index
    if node_cache[:simple_statement].has_key?(index)
      cached = node_cache[:simple_statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    r2 = _nt_expression_statement
    if r2
      r1 = r2
    else
      r3 = _nt_if_statement
      if r3
        r1 = r3
      else
        r4 = _nt_while_statement
        if r4
          r1 = r4
        else
          r5 = _nt_return_statement
          if r5
            r1 = r5
          else
            @index = i1
            r1 = nil
          end
        end
      end
    end
    s0 << r1
    if r1
      r6 = _nt__s_
      s0 << r6
      if r6
        if has_terminal?(';', false, index)
          r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(';')
          r7 = nil
        end
        s0 << r7
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(SimpleStatement0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:simple_statement][start_index] = r0

    r0
  end

  module CompoundStatement0
    def _sp_1
      elements[0]
    end

    def simple_statement
      elements[1]
    end

    def _sp_2
      elements[2]
    end
  end

  module CompoundStatement1
  end

  def _nt_compound_statement
    start_index = index
    if node_cache[:compound_statement].has_key?(index)
      cached = node_cache[:compound_statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('{', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('{')
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        r4 = _nt__sp_
        s3 << r4
        if r4
          r5 = _nt_simple_statement
          s3 << r5
          if r5
            r6 = _nt__sp_
            s3 << r6
          end
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(CompoundStatement0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
      if r2
        if has_terminal?('}', false, index)
          r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('}')
          r7 = nil
        end
        s0 << r7
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CompoundStatement1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:compound_statement][start_index] = r0

    r0
  end

  module ExpressionStatement0
    def expression
      elements[0]
    end

    def _s_
      elements[1]
    end
  end

  def _nt_expression_statement
    start_index = index
    if node_cache[:expression_statement].has_key?(index)
      cached = node_cache[:expression_statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_expression
    s0 << r1
    if r1
      r2 = _nt__s_
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ExpressionStatement0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:expression_statement][start_index] = r0

    r0
  end

  module ReturnStatement0
    def _return
      elements[0]
    end

    def _s_1
      elements[1]
    end

    def _s_2
      elements[3]
    end
  end

  def _nt_return_statement
    start_index = index
    if node_cache[:return_statement].has_key?(index)
      cached = node_cache[:return_statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt__return
    s0 << r1
    if r1
      r2 = _nt__s_
      s0 << r2
      if r2
        r4 = _nt_expression
        if r4
          r3 = r4
        else
          r3 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r3
        if r3
          r5 = _nt__s_
          s0 << r5
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ReturnStatement0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:return_statement][start_index] = r0

    r0
  end

  module FunctionDef0
    def _def
      elements[0]
    end

    def _s_1
      elements[1]
    end

    def identifier
      elements[2]
    end

    def _s_2
      elements[3]
    end

    def parameter_list
      elements[4]
    end

    def _s_3
      elements[5]
    end

    def statement
      elements[6]
    end
  end

  def _nt_function_def
    start_index = index
    if node_cache[:function_def].has_key?(index)
      cached = node_cache[:function_def][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt__def
    s0 << r1
    if r1
      r2 = _nt__s_
      s0 << r2
      if r2
        r3 = _nt_identifier
        s0 << r3
        if r3
          r4 = _nt__s_
          s0 << r4
          if r4
            r5 = _nt_parameter_list
            s0 << r5
            if r5
              r6 = _nt__s_
              s0 << r6
              if r6
                r7 = _nt_statement
                s0 << r7
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(FunctionDef0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:function_def][start_index] = r0

    r0
  end

  module IfStatement0
    def _s_
      elements[0]
    end

    def elsif_statement
      elements[1]
    end
  end

  module IfStatement1
    def _if
      elements[0]
    end

    def _s_1
      elements[1]
    end

    def _s_2
      elements[3]
    end

    def expression
      elements[4]
    end

    def _s_3
      elements[5]
    end

    def _s_4
      elements[7]
    end

    def statement
      elements[8]
    end

    def _s_5
      elements[9]
    end

    def _s_6
      elements[11]
    end

  end

  def _nt_if_statement
    start_index = index
    if node_cache[:if_statement].has_key?(index)
      cached = node_cache[:if_statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt__if
    s0 << r1
    if r1
      r2 = _nt__s_
      s0 << r2
      if r2
        if has_terminal?('(', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('(')
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt__s_
          s0 << r4
          if r4
            r5 = _nt_expression
            s0 << r5
            if r5
              r6 = _nt__s_
              s0 << r6
              if r6
                if has_terminal?(')', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure(')')
                  r7 = nil
                end
                s0 << r7
                if r7
                  r8 = _nt__s_
                  s0 << r8
                  if r8
                    r9 = _nt_statement
                    s0 << r9
                    if r9
                      r10 = _nt__s_
                      s0 << r10
                      if r10
                        s11, i11 = [], index
                        loop do
                          i12, s12 = index, []
                          r13 = _nt__s_
                          s12 << r13
                          if r13
                            r14 = _nt_elsif_statement
                            s12 << r14
                          end
                          if s12.last
                            r12 = instantiate_node(SyntaxNode,input, i12...index, s12)
                            r12.extend(IfStatement0)
                          else
                            @index = i12
                            r12 = nil
                          end
                          if r12
                            s11 << r12
                          else
                            break
                          end
                        end
                        r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                        s0 << r11
                        if r11
                          r15 = _nt__s_
                          s0 << r15
                          if r15
                            r17 = _nt_else_statement
                            if r17
                              r16 = r17
                            else
                              r16 = instantiate_node(SyntaxNode,input, index...index)
                            end
                            s0 << r16
                          end
                        end
                      end
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(IfStatement1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:if_statement][start_index] = r0

    r0
  end

  module ElseStatement0
    def _else
      elements[0]
    end

    def _s_
      elements[1]
    end

    def statement
      elements[2]
    end
  end

  def _nt_else_statement
    start_index = index
    if node_cache[:else_statement].has_key?(index)
      cached = node_cache[:else_statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt__else
    s0 << r1
    if r1
      r2 = _nt__s_
      s0 << r2
      if r2
        r3 = _nt_statement
        s0 << r3
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ElseStatement0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:else_statement][start_index] = r0

    r0
  end

  module ElsifStatement0
    def _elsif
      elements[0]
    end

    def _s_
      elements[1]
    end

    def statement
      elements[2]
    end
  end

  def _nt_elsif_statement
    start_index = index
    if node_cache[:elsif_statement].has_key?(index)
      cached = node_cache[:elsif_statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt__elsif
    s0 << r1
    if r1
      r2 = _nt__s_
      s0 << r2
      if r2
        r3 = _nt_statement
        s0 << r3
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ElsifStatement0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:elsif_statement][start_index] = r0

    r0
  end

  module WhileStatement0
    def _while
      elements[0]
    end

    def _s_1
      elements[1]
    end

    def _s_2
      elements[3]
    end

    def expression
      elements[4]
    end

    def _s_3
      elements[5]
    end

    def _s_4
      elements[7]
    end

    def statement
      elements[8]
    end
  end

  def _nt_while_statement
    start_index = index
    if node_cache[:while_statement].has_key?(index)
      cached = node_cache[:while_statement][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt__while
    s0 << r1
    if r1
      r2 = _nt__s_
      s0 << r2
      if r2
        if has_terminal?('(', false, index)
          r3 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('(')
          r3 = nil
        end
        s0 << r3
        if r3
          r4 = _nt__s_
          s0 << r4
          if r4
            r5 = _nt_expression
            s0 << r5
            if r5
              r6 = _nt__s_
              s0 << r6
              if r6
                if has_terminal?(')', false, index)
                  r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure(')')
                  r7 = nil
                end
                s0 << r7
                if r7
                  r8 = _nt__s_
                  s0 << r8
                  if r8
                    r9 = _nt_statement
                    s0 << r9
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(WhileStatement0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:while_statement][start_index] = r0

    r0
  end

  def _nt_expression
    start_index = index
    if node_cache[:expression].has_key?(index)
      cached = node_cache[:expression][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    r0 = _nt_numeric_literal

    node_cache[:expression][start_index] = r0

    r0
  end

  module ParameterList0
    def _s_1
      elements[1]
    end

    def _s_2
      elements[3]
    end

  end

  def _nt_parameter_list
    start_index = index
    if node_cache[:parameter_list].has_key?(index)
      cached = node_cache[:parameter_list][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('(', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('(')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt__s_
      s0 << r2
      if r2
        i3 = index
        r4 = _nt_parameter_list
        if r4
          r3 = r4
        else
          if has_terminal?('', false, index)
            r5 = instantiate_node(SyntaxNode,input, index...(index + 0))
            @index += 0
          else
            terminal_parse_failure('')
            r5 = nil
          end
          if r5
            r3 = r5
          else
            @index = i3
            r3 = nil
          end
        end
        s0 << r3
        if r3
          r6 = _nt__s_
          s0 << r6
          if r6
            if has_terminal?(')', false, index)
              r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(')')
              r7 = nil
            end
            s0 << r7
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ParameterList0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:parameter_list][start_index] = r0

    r0
  end

  module ParameterList0
    def identifier
      elements[0]
    end

  end

  def _nt_parameter_list
    start_index = index
    if node_cache[:parameter_list].has_key?(index)
      cached = node_cache[:parameter_list][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_identifier
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        r3 = _nt_additional_param
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(ParameterList0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:parameter_list][start_index] = r0

    r0
  end

  module AdditionalParam0
    def identifier
      elements[1]
    end
  end

  def _nt_additional_param
    start_index = index
    if node_cache[:additional_param].has_key?(index)
      cached = node_cache[:additional_param][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?(',', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure(',')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_identifier
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(AdditionalParam0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:additional_param][start_index] = r0

    r0
  end

  def _nt_any_keyword
    start_index = index
    if node_cache[:any_keyword].has_key?(index)
      cached = node_cache[:any_keyword][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt__if
    if r1
      r0 = r1
    else
      r2 = _nt__return
      if r2
        r0 = r2
      else
        r3 = _nt__while
        if r3
          r0 = r3
        else
          r4 = _nt__def
          if r4
            r0 = r4
          else
            r5 = _nt__struct
            if r5
              r0 = r5
            else
              @index = i0
              r0 = nil
            end
          end
        end
      end
    end

    node_cache[:any_keyword][start_index] = r0

    r0
  end

  def _nt__struct
    start_index = index
    if node_cache[:_struct].has_key?(index)
      cached = node_cache[:_struct][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('struct', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure('struct')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('STRUCT', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 6))
        @index += 6
      else
        terminal_parse_failure('STRUCT')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:_struct][start_index] = r0

    r0
  end

  def _nt__while
    start_index = index
    if node_cache[:_while].has_key?(index)
      cached = node_cache[:_while][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('while', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 5))
      @index += 5
    else
      terminal_parse_failure('while')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('WHILE', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure('WHILE')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:_while][start_index] = r0

    r0
  end

  def _nt__def
    start_index = index
    if node_cache[:_def].has_key?(index)
      cached = node_cache[:_def][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('def', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 3))
      @index += 3
    else
      terminal_parse_failure('def')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('DEF', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 3))
        @index += 3
      else
        terminal_parse_failure('DEF')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:_def][start_index] = r0

    r0
  end

  def _nt__if
    start_index = index
    if node_cache[:_if].has_key?(index)
      cached = node_cache[:_if][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('if', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure('if')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('IF', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure('IF')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:_if][start_index] = r0

    r0
  end

  def _nt__elsif
    start_index = index
    if node_cache[:_elsif].has_key?(index)
      cached = node_cache[:_elsif][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('elsif', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 5))
      @index += 5
    else
      terminal_parse_failure('elsif')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('ELSIF', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 5))
        @index += 5
      else
        terminal_parse_failure('ELSIF')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:_elsif][start_index] = r0

    r0
  end

  def _nt__else
    start_index = index
    if node_cache[:_else].has_key?(index)
      cached = node_cache[:_else][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('else', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 4))
      @index += 4
    else
      terminal_parse_failure('else')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('ELSE', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 4))
        @index += 4
      else
        terminal_parse_failure('ELSE')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:_else][start_index] = r0

    r0
  end

  def _nt__return
    start_index = index
    if node_cache[:_return].has_key?(index)
      cached = node_cache[:_return][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    if has_terminal?('return', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure('return')
      r1 = nil
    end
    if r1
      r0 = r1
    else
      if has_terminal?('RETURN', false, index)
        r2 = instantiate_node(SyntaxNode,input, index...(index + 6))
        @index += 6
      else
        terminal_parse_failure('RETURN')
        r2 = nil
      end
      if r2
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:_return][start_index] = r0

    r0
  end

  module Type0
  end

  def _nt_type
    start_index = index
    if node_cache[:type].has_key?(index)
      cached = node_cache[:type][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      if has_terminal?('\G[A-Z\\._]', true, index)
        r2 = true
        @index += 1
      else
        r2 = nil
      end
      if r2
        s1 << r2
      else
        break
      end
    end
    if s1.empty?
      @index = i1
      r1 = nil
    else
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    end
    s0 << r1
    if r1
      s3, i3 = [], index
      loop do
        if has_terminal?('\G[a-zA-Z\\._0-9]', true, index)
          r4 = true
          @index += 1
        else
          r4 = nil
        end
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
      s0 << r3
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Type0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:type][start_index] = r0

    r0
  end

  module Identifier0
  end

  def _nt_identifier
    start_index = index
    if node_cache[:identifier].has_key?(index)
      cached = node_cache[:identifier][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    s1, i1 = [], index
    loop do
      if has_terminal?('\G[a-z\\._]', true, index)
        r2 = true
        @index += 1
      else
        r2 = nil
      end
      if r2
        s1 << r2
      else
        break
      end
    end
    if s1.empty?
      @index = i1
      r1 = nil
    else
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
    end
    s0 << r1
    if r1
      s3, i3 = [], index
      loop do
        if has_terminal?('\G[a-zA-Z\\._0-9]', true, index)
          r4 = true
          @index += 1
        else
          r4 = nil
        end
        if r4
          s3 << r4
        else
          break
        end
      end
      r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
      s0 << r3
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Identifier0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:identifier][start_index] = r0

    r0
  end

  def _nt__s_
    start_index = index
    if node_cache[:_s_].has_key?(index)
      cached = node_cache[:_s_][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      if has_terminal?('\G[ \\t\\n]', true, index)
        r1 = true
        @index += 1
      else
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    r0 = instantiate_node(SyntaxNode,input, i0...index, s0)

    node_cache[:_s_][start_index] = r0

    r0
  end

  module StringLiteral0
  end

  module StringLiteral1
  end

  module StringLiteral2
			def content
				{:type => :string_literal, :token => text_value, :value => elements[1].text_value)}
			end
  end

  def _nt_string_literal
    start_index = index
    if node_cache[:string_literal].has_key?(index)
      cached = node_cache[:string_literal][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('"', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('"')
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3 = index
        if has_terminal?('\"', false, index)
          r4 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure('\"')
          r4 = nil
        end
        if r4
          r3 = r4
        else
          i5, s5 = index, []
          i6 = index
          if has_terminal?('"', false, index)
            r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure('"')
            r7 = nil
          end
          if r7
            r6 = nil
          else
            @index = i6
            r6 = instantiate_node(SyntaxNode,input, index...index)
          end
          s5 << r6
          if r6
            if index < input_length
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure("any character")
              r8 = nil
            end
            s5 << r8
          end
          if s5.last
            r5 = instantiate_node(SyntaxNode,input, i5...index, s5)
            r5.extend(StringLiteral0)
          else
            @index = i5
            r5 = nil
          end
          if r5
            r3 = r5
          else
            @index = i3
            r3 = nil
          end
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
      if r2
        if has_terminal?('"', false, index)
          r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('"')
          r9 = nil
        end
        s0 << r9
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(StringLiteral1)
      r0.extend(StringLiteral2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:string_literal][start_index] = r0

    r0
  end

  module NumericLiteral0
  end

  module NumericLiteral1
			def content
				sign = 1
				if text_value.start_with? '-'
					sign = -1
				end
				{:type => :numeric_literal, :token => text_value, :value => elements[1].value * sign}
			end
  end

  def _nt_numeric_literal
    start_index = index
    if node_cache[:numeric_literal].has_key?(index)
      cached = node_cache[:numeric_literal][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('-', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('-')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      i3 = index
      r4 = _nt_hex
      if r4
        r3 = r4
      else
        r5 = _nt_decimal
        if r5
          r3 = r5
        else
          @index = i3
          r3 = nil
        end
      end
      s0 << r3
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(NumericLiteral0)
      r0.extend(NumericLiteral1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:numeric_literal][start_index] = r0

    r0
  end

  module Decimal0
			def value
				text_value.to_i(10)
			end
  end

  def _nt_decimal
    start_index = index
    if node_cache[:decimal].has_key?(index)
      cached = node_cache[:decimal][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    s0, i0 = [], index
    loop do
      if has_terminal?('\G[0-9]', true, index)
        r1 = true
        @index += 1
      else
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Decimal0)
    end

    node_cache[:decimal][start_index] = r0

    r0
  end

  module Hex0
  end

  module Hex1
			def value
				text_value[2..-1].to_i(16)
			end
  end

  def _nt_hex
    start_index = index
    if node_cache[:hex].has_key?(index)
      cached = node_cache[:hex][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('0x', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure('0x')
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        if has_terminal?('\G[0-9a-fA-F]', true, index)
          r3 = true
          @index += 1
        else
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      if s2.empty?
        @index = i2
        r2 = nil
      else
        r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      end
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Hex0)
      r0.extend(Hex1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:hex][start_index] = r0

    r0
  end

end

class BplusParser < Treetop::Runtime::CompiledParser
  include Bplus
end
